--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://yarovenko-dmitry.github.io/Team_task_map/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "react-yandex-maps": "^4.4.0",
+    "react-tap-event-plugin": "^3.0.3",
+    "react-yandex-maps": "^4.5.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -46,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "optimize-css-assets-webpack-plugin": "^5.0.4"
   }
 }
